--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,7 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Encode+Sans:wght@100;300;500&family=Roboto:wght@100;300;500;700&display=swap');
 
 :root {
-  --primary-color: #B9001F;
+  --primary-color: #b9001f;
 }
 
 body {
