--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,5 +1,5 @@
-@import url('reset.css');
-@import url('global.css');
+@import url(/SpiderMan-Multiverso/assets/css/reset.css);
+@import url(/SpiderMan-Multiverso/assets/css/global.css);
 
 body {
   background-color: var(--primary-color);
@@ -7,7 +7,7 @@ body {
 
 body::before {
   content: "";
-  background-image: url('../images/spider-man-background.jpg');
+  background-image: url(/SpiderMan-Multiverso/assets/images/spider-man-background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -15,7 +15,6 @@ body::before {
   height: 100%;
   position: absolute;
   opacity: 0.2;
-  transition: background-image 1s ease-in-out, opacity 1s ease-in-out;
 }
 
 .s-menu {
@@ -32,9 +31,9 @@ body::before {
 }
 
 .s-menu__icon {
-  width: 2.5rem;
-  margin: 0 1.25rem;
-  vertical-align: middle;
+ width: 2.5rem;
+ margin: 0 1.25rem;
+ vertical-align: middle; 
 }
 
 .s-container {
@@ -42,27 +41,14 @@ body::before {
   display: flex;
   align-items: center;
   justify-content: space-evenly;
-  perspective: 3000px;
 }
 
 .s-card {
-  border: 0.5rem solid white;
-  width: 100%;
+  border: 0.5rem solid #fff;
+  width: calc(100% / 3 - 8%);
   height: 70vh;
-  position: absolute;
-  transition: filter .5s ease-in-out;
-}
-
-.s-card:nth-child(1) {
-  transform: rotateY(0deg) translateZ(50vw);
-}
-
-.s-card:nth-child(2) {
-  transform: rotateY(120deg) translateZ(50vw);
-}
-
-.s-card:nth-child(3) {
-  transform: rotateY(240deg) translateZ(50vw);
+  position: relative;
+  transition: filter 0.5s ease-in-out;
 }
 
 .s-card__background {
@@ -93,13 +79,11 @@ body::before {
 }
 
 .s-controller {
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 3rem;
-  bottom: 1.5rem;
-  width: 100%;
 }
 
 .s-controller__button {
@@ -108,41 +92,38 @@ body::before {
   justify-content: center;
   width: 2.5rem;
   height: 2.5rem;
-  border: 2px solid white;
   border-radius: 50%;
+  border: 2px solid #fff;
   background-color: var(--primary-color);
   text-align: center;
   font-size: 1rem;
   font-weight: bold;
-  cursor: pointer;
   z-index: 1;
-  transition: transform 0.3s ease-in-out;
-}
-
-.s-controller__button:hover {
-  transform: scale(1.1);
+  cursor: pointer;
+  transition: transform .3s ease-in-out;
 }
 
 .s-controller__button:nth-child(2) {
   margin: 0 3.75rem;
 }
 
-.s-controller__button--active {
-  background-color: white;
-  color: var(--primary-color);
-  border: 0.1875rem solid var(--primary-color);
-  outline: 0.125rem solid white;
+.s-controller__button:hover {
+  transform: scale(1.1);
+  background-color: #fff;
+  color:var(--primary-color);
+  
 }
 
 .s-controller__line {
-  background-color: white;
+  background-color: #fff;
   width: 50%;
-  height: 2px;
   position: absolute;
+  height: 2px;
 }
 
-/* Hover Animation */
-
+/*
+hover Animation
+------------------*/
 .s-card--hovered .s-card__background {
   cursor: pointer;
   opacity: 0;
@@ -150,19 +131,18 @@ body::before {
 
 .s-card--hovered .s-card__image {
   transform: scale(1.4);
-  filter: drop-shadow(30px 10px 4px rgba(0, 0, 0, .5));
+  filter: drop-shadow(30px 10px 4px  rgba(0, 0, 0, 0.5));
 }
 
 body#spider-man-01-hovered::before {
-  background-image: url('../images/pic-sm-bg-01.jpg');
+  background-image: url(/SpiderMan-Multiverso/assets/images/pic-sm-bg-01.jpg);
 }
 
 body#spider-man-02-hovered::before {
-  background-image: url('../images/pic-sm-bg-02.jpg');
+  background-image: url(/SpiderMan-Multiverso/assets/images/pic-sm-bg-02.jpg);
 }
-
 body#spider-man-03-hovered::before {
-  background-image: url('../images/pic-sm-bg-03.jpg');
+  background-image: url(/SpiderMan-Multiverso/assets/images/pic-sm-bg-03.jpg);
 }
 
 body[id^="spider-man-"]::before {
@@ -175,12 +155,4 @@ body[id^="spider-man-"] .s-card:not(.s-card--hovered) {
 
 .s-card--hovered .s-card__title {
   bottom: 50%;
-}
-
-.s-cards-carousel {
-  display: flex;
-  justify-content: center;
-  width: calc(100vw / 3 - 10%);
-  transform-style: preserve-3d;
-  transition: transform 0.4s ease-in;
 }
