--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -4,8 +4,8 @@
   vertical-align: baseline;
   list-style: none;
   border: 0;
-  color: #FFF;
+  color: #fff;
   font-family: "Poppins", sans-serif;
-  font-size: 16px;
+  font-size: 1em;
   text-decoration: none;
 }
